--- a/statslab_bird.Rmd
+++ b/statslab_bird.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Stats Lab Bird"
-author: "Joel Alder, Samir Hauser, Connor Charlton"
-date: "2023-04-25"
+author: "Joel Alder, Connor Charlton, Samir Hauser"
+date: "2023-05-02"
 output: pdf_document
 ---
 
@@ -28,7 +28,7 @@ library(reprtree)
 
 ## Data pre processing
 
-We first load in the data and pre process them.
+We first load in the data and preprocess it.
 
 ```{r load the data, echo = FALSE}
 # load the data and library
@@ -36,7 +36,7 @@ d.bird <- read_delim("C:/Users/joela/OneDrive - ETH Zurich/FS23/Snow-finches/Dat
                           delim = ";", escape_double = FALSE, trim_ws = TRUE)
 ```
 
-We transform our response variable to 0 and 1.
+We transform our response variable values to 0 and 1.
 ```{r response transform}
 d.bird$sex_genetics[d.bird$sex_genetics == "M"] <- "m"
 d.bird$sex_genetics[d.bird$sex_genetics == "F"] <- "f"
@@ -44,7 +44,7 @@ d.bird$sex_genetics[d.bird$sex_genetics == "m"] <- 0
 d.bird$sex_genetics[d.bird$sex_genetics == "f"] <- 1
 ```
 
-Next we make a new variable season, which indicates the time of the catch. We do this because some of the variables depend on the time of the year. I. e. the weight is different in summer and winter.
+Next we define a new variable season, which indicates the time of the ringing. We do this because some of the variables depend on the time of year; for example the weight is different in summer and winter.
 ```{r season}
 d.bird$season <- ifelse(d.bird$month >= 3 & d.bird$month <= 5, "spring",
                         ifelse(d.bird$month >= 6 & d.bird$month <= 8, "summer",
@@ -54,7 +54,7 @@ d.bird$season <- factor(d.bird$season, levels = c("winter", "spring", "summer", 
                         labels = c("0", "1", "2", "3"))
 ```
 
-We have two variables for the feather length, P1 and P8. We are filling out P8 if there is a NA and we have a measure in the P1 column. In total there are 32 cases of it.
+We have two variables for the feather length, P1 and P8. We merge them into one variable and where this variable takes the value of P8 if P8 has a value, and takes the value of P1 otherwise. There are only 32 instances for which P1 has a value and P8 does not.
 ```{r P1 and P8}
 if (sum(!is.na(d.bird$P1)) > 0) {
   d.bird$P8[is.na(d.bird$P8)] <- d.bird$P1[is.na(d.bird$P8)]
@@ -63,7 +63,7 @@ if (sum(!is.na(d.bird$P1)) > 0) {
 }
 ```
 
-There are some duplicates in the dataset which we remove. Then there is a possibility that one bird is captured more than once. If this is the case we only use the newest observation. Afterwards we select only the adult birds and keep the one for which we have the label. In the end we select the columns we want to use for training. There are all the different morphological traits.
+There are some duplicates in the dataset which we remove. Additionally, there is a possibility that one bird is captured more than once. If this is the case we only use the latest observation. Afterwards, we select only the adult birds and keep the ones for which we have the labels. In the end we select the columns we want to use for training. These are all the different morphological traits.
 ```{r}
 # Remove duplicates 
 d.bird <- d.bird[!duplicated(d.bird, fromLast = TRUE), ]
@@ -93,11 +93,11 @@ df_adult_sub$sex_genetics <- as.factor(df_adult_sub$sex_genetics)
 str(df_adult_sub)
 ```
 
-We now train three different models for this data. A decision tree, random forest and lastly a logit model with imputed data via the mice library. We use the accuracy as our evaluation metric.
+We now train three different models on this data - a decision tree, a random forest and lastly a logistic regression model with missing values imputed via using MICE. We use the accuracy of our predictions as our evaluation metric.
 
 ## Decision Tree
 
-We use a ten fold cross-validation to get the accuracy score of the decision tree. The advantage of this method is the it can handle the missing values.
+We use a ten fold cross-validation to get the accuracy score of the decision tree. The advantage of this method is that it can handle the missing values.
 ```{r Decision Tree CV}
 set.seed(123)
 n <- dim(df_adult_sub)[1]
@@ -113,7 +113,7 @@ for (i in 1:K) {
 cat("Accuracy Decision Tree:", round(mean(Fold.error), digits = 5))
 ```
 
-We get a accuracy around **84.7 %**. One question we have to ask is, if we should weight the two error differently. Maybe the miss classification of a female bird as a male should have a higher price than the opposite. We should keep in mind that we have a unbalanced set with two thirds male birds.
+We get an accuracy around **84.7 %**. One question that is raised is whether these two errors should be weighted differently. Maybe the misclassification of a female bird as a male bird should have a higher price than the opposite. We should keep in mind that the sex distribution at the population level is unbalanced, with two thirds being male.
 Now we plot the decision tree, to see which variables are important.
 
 ```{r Decision Tree example, echo = FALSE}
@@ -136,11 +136,11 @@ rpart.plot(tree_model)
 #print(confusion_matrix)
 ```
 
-We get a rather easy tree. The 0 stands for male birds and the 1 is a female bird. As we have seen in the descriptive analysis of our data, the wing variable is the most important one. We just have two variables in our tree.
+This produces a rather simple tree. The 0 values represent male birds and the 1 values represent female birds. As can be seen in the descriptive analysis of our data, the wing variable is the most informative for the prediction of genetic sex. There are only two variables in our tree.
 
 ## Random Forest
 
-We use a ten fold cross-validation to get the accuracy score of the random forest. The random forest can also handle missing values by specifying the na.action parameter. It will start by using median/mode for missing values, but then it grows a forest and computes proximities, then iterate and construct a forest using these newly filled values etc.
+We again use ten fold cross-validation to get the accuracy score of the random forest. The random forest can also handle missing values by specifying the na.action parameter. This will start by imputing the missing values using the column-wise median or mode. Then it grows a forest and computes proximities, before iterating through and constructing a new forest using these newly imputed values and repeating this process on repeat.
 ```{r Random Forest}
 Fold.error <- numeric(K)
 for (i in 1:K) {
@@ -154,17 +154,18 @@ for (i in 1:K) {
 cat("Accuracy Random Forest:", round(mean(Fold.error), digits = 5))
 ```
 
-We get a accuracy around **84 %**. This can be due that we have to omit the test data with NAs and therefore we have less test data compared to the decision tree.
+We get an accuracy around **84 %**, but this may only be due to the fact that we had to omit the test data with NAs and therefore we had less test data compared to the decision tree.
 
 ```{r Random Forest plot, echo = FALSE}
 model <- randomForest(sex_genetics ~ ., data = df_adult_sub, ntree = 200, importance = TRUE,
                        na.action = na.roughfix)
+varImpPlot(model)
 #reprtree:::plot.getTree(model)
 ```
 
-## Logit model
+## Logistic regression model
 
-We use a ten fold cross-validation to get the accuracy score of the logit model. Because this model type can not handle missing values, we will impute this with the mice function. This function gives in our case five different imputed data set back. We then fit for every of this data set the logit model and then pool the estimates. With the pooled estimates we predict the sex on our test data set.
+We again use ten fold cross-validation to compute the accuracy score of the logistic regression model. Because this model type can not handle missing values, the missing values are first imputed using MICE. This works by producing 35 separate imputations on which the logistic regression model is fitted independently, and the modal classification adopted.
 
 ```{r Mode function, echo = FALSE}
 Mode <- function(x) {
@@ -200,8 +201,8 @@ for (i in 1:K) {
   size = nrow(imp_train[[1]][test.ind,-(10)]) # remove sex
   
   # loop over imputed data 
-  dat = matrix(nrow = size, ncol = 5)
-  for (k in 1:5)
+  dat = matrix(nrow = size, ncol = 35)
+  for (k in 1:35)
   {
     predicted_values = predict(pooled_lm, newdata = imp[[k]][test.ind,-(10)],
                                type="response")
@@ -218,10 +219,10 @@ for (i in 1:K) {
 cat("Accuracy Logit Model:", round(mean(Fold.error), digits = 5))
 ```
 
-We get a slightly better accuracy of **86.5 %** for this model compared to the decision tree. Now we want to have a look at the pooled estimates of the logit model to see the significance of them.
+This results in a slightly improved accuracy of **87.1 %**. Now we examine the pooled estimates for the coefficients of the logistic regression model to the significance of them. We omit the fat variable because the standard error of the coefficient estimates was too high and the inclusion of the fat variable, as a predictor, explains too little variance in the regressand.
 
 ```{r Logit model estimates, echo = FALSE}
-imp <- mice(df_adult_sub, seed = 123, print = F, m = 5)
+imp <- mice(df_adult_sub, seed = 123, print = F, m = 35)
 fit <- with(imp, glm(sex_genetics ~ season + Age
                                + Wing + P8 + Tarsus + weight + 
                                Muscle + Bill_length,
@@ -233,7 +234,7 @@ pooled <- pool(fit)
 summary(pooled)
 ```
 
-We see a similar picture to the decision tree. The two variables wing and P8 are highly significant. But also the variable bill_length and muscle are on the 5 % level significant.
+Similarly, to the decision tree this suggests that both the Wing and P8 variables are highly significant and the Bill length and Muscle variables are significant on a 5 % level.
 
 ## Conclusion
-As a small conclusion we were able to predict the sex of the birds with around 85 % accuracy. The two most important variables to measure in the future are the Wing length and the feather length (P8). The imputing of the data via mice and then using the logit model yield to a slightly better model. For the next steps, we want to present our result to our client and discuss it with her. We also have some question left, i. e. why are there some duplicates in the data? Is it good to combine the variables P1 and P8 or are the measure different? Should we weight one miss classification more than the other one? 
+In conclusion, the imputation of missing values via MICE and subsequent classification using logistic regression is the best model, yielding around 87 % accuracy for the prediction of the genetic sex of the birds. The two most important variables to measure going forward are the Wing length and the feather length (P8).
